# edea

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  NOTES.md  README.md  main.py  pyproject.toml
.github/workflows/: codeql-analysis.yml  tests.yml
edea/: __main__.py  bbox.py  edea.py  imgdiff.py  kicad_files.py  parser.py  util.py
edea/types/: base.py  config.py  from_list_expr.py  parser.py
edea/types/schematic/: __init__.py  schematic.py  shapes.py  symbol.py
src/: __main__.py  edea.py  parser.py
tests/: test_mem_use.py  test_metadata.py  test_parse_all.py  test_pcb.py  test_render.py  test_schematic_merge.py  test_types.py  util.py
tests/graphics_assets/: .gitignore
tests/kicad_projects/3v3ldo/: 3v3ldo.kicad_pcb  3v3ldo.kicad_pro  3v3ldo.kicad_sch
tests/kicad_projects/MP2451/: MP2451.kicad_pcb  MP2451.kicad_pro  MP2451.kicad_sch
tests/kicad_projects/STM32F072CBU6/: STM32F072CBU6.kicad_pcb  STM32F072CBU6.kicad_pro  STM32F072CBU6.kicad_sch
tests/kicad_projects/colorful/: colorful.kicad_pro  colorful.kicad_sch
tests/kicad_projects/ferret/: control.kicad_sch  ferret.kicad_pcb  ferret.kicad_pro  ferret.kicad_sch  input.kicad_sch  power.kicad_sch
