[tool.poetry]
name = "edea"
version = "0.1.0"
description = "KiCAD file format parser and tools"
authors = ["Elen Eisendle <ln@calcifer.ee>", "Zoé Bőle <zoe@astech.hu>"]
license = "EUPL-1.2"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.21.4" # latest version in current alpine

[tool.poetry.dev-dependencies]
pylint = "^2.13.7"
pytest = "^7.1.2"
bandit = "^1.7.4"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
